terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "app_sg" {
  name        = "aupp-api-sg"
  description = "Allow SSH, app, Grafana, Prometheus, Node Exporter"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3001
    to_port     = 3001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "app_server" {
  ami           = "ami-0ec10929233384c7f"
  instance_type = "t3.medium"
  key_name      = "aupp"

  vpc_security_group_ids = [aws_security_group.app_sg.id]

  tags = {
    Name = "AUPP-LMS-DevOps-Server"
  }
}

output "ec2_public_ip" {
  value = aws_instance.app_server.public_ip
}
